--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Welcome to the Spaceeee webpage</h1>
+    <h1>Welcome to the Spaceeee webpage 1.0</h1>
     <button id="my-button">Click me</button>
     </script>    <p>This is a paragraph of text.</p>
     <img src="ph-intro.jpg" alt="A beautiful image of Orion Nebula.">
